--- a/src/main/resources/static/JS/test2/app.html
+++ b/src/main/resources/static/JS/test2/app.html
@@ -14,13 +14,14 @@
 <body>
     <div id="app" class="app">
         <div class="head"> 
-            <span class="title"> On-Time </span>
+            <span class="title"> On-Time </span><br>
+            <button v-for='c in categories' :class="{ 'active' : category === c }" @click="category = c">{{ c }}</button>
             <span class="list-btn" v-if = "mode !== 'list'" @click = "mode = 'list'"> &lt; </span>
         </div>
         <div class="body">
             <div class="list" v-if="mode === 'list'">
                 <ul>
-                    <li v-for="m in memos" @click = "open(m.id)">{{ m.title }}</li>
+                    <li v-for="m in memos" @click = "open(m.title)">{{ m.title }}</li>
                 </ul>
             </div>
             <div class="write" v-else> <!-- 상세내용 표기 -->
