Add : JPA와 KakaoLogin 연동 테스트(이런저런 테스트 하느라 print 이상한거 많이했습니다 >,.<)

--- a/src/main/resources/static/afterlogin2.html
+++ b/src/main/resources/static/afterlogin2.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     Hello world<br>
-    <h2>Hello! ㅇㅇㅇ의 개인정보</h2>
-    <span th:text="${PI.id}"></span>
+    <h2>Hello! 우석이의 개인정보</h2>
+    <span th:text="${PI}"></span>
     <br><hr><br>
+    <span th:each="test:${PI}" th:text="${test}"></span>
     <!-- <br><hr><br>
     <span th:text="${PI.birthday}">${PI}</span>
     <br><hr><br>
