Add : CSS on my-page and main-page

--- a/src/main/resources/static/JS/test4/app.html
+++ b/src/main/resources/static/JS/test4/app.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link href="app.css" rel="stylesheet" />
+    <link href="app.css" rel="stylesheet" />
     <title>가즈아앙~</title>
 </head>
 
